--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <version>2.8.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.5.0</version>
+        </dependency>
 
     </dependencies>
 
